crates/shiplog-validator/tests/snapshots/validator__email_empty_error.snap
---
source: crates/shiplog-validator/tests/validator.rs
expression: err
---
field: email
message: email cannot be empty
code: Empty
