crates/shiplog-validator/tests/snapshots/validator__email_invalid_format_error.snap
---
source: crates/shiplog-validator/tests/validator.rs
expression: err
---
field: email
message: "invalid email format: not-an-email"
code: InvalidFormat
