crates/shiplog-validator/tests/snapshots/validator__ipv4_octet_out_of_range_error.snap
---
source: crates/shiplog-validator/tests/validator.rs
expression: err
---
field: ip_address
message: "octet out of range: 256"
code: OutOfRange
