crates/shiplog-validator/tests/snapshots/validator__ipv4_wrong_octets_error.snap
---
source: crates/shiplog-validator/tests/validator.rs
expression: err
---
field: ip_address
message: IPv4 must have 4 octets
code: InvalidFormat
