crates/shiplog-validator/tests/snapshots/validator__password_empty_error.snap
---
source: crates/shiplog-validator/tests/validator.rs
expression: err
---
field: password
message: password cannot be empty
code: Empty
