crates/shiplog-validator/tests/snapshots/validator__password_no_variety_error.snap
---
source: crates/shiplog-validator/tests/validator.rs
expression: err
---
field: password
message: "password must contain uppercase, lowercase, and digit"
code: InvalidValue
