crates/shiplog-validator/tests/snapshots/validator__password_too_short_error.snap
---
source: crates/shiplog-validator/tests/validator.rs
expression: err
---
field: password
message: password must be at least 8 characters
code: TooShort
