crates/shiplog-validator/tests/snapshots/validator__range_above_max_error.snap
---
source: crates/shiplog-validator/tests/validator.rs
expression: err
---
field: value
message: value 200 is greater than maximum 100
code: OutOfRange
