crates/shiplog-validator/tests/snapshots/validator__range_below_min_error.snap
---
source: crates/shiplog-validator/tests/validator.rs
expression: err
---
field: value
message: value 5 is less than minimum 10
code: OutOfRange
