crates/shiplog-validator/tests/snapshots/validator__url_empty_error.snap
---
source: crates/shiplog-validator/tests/validator.rs
expression: err
---
field: url
message: URL cannot be empty
code: Empty
