crates/shiplog-validator/tests/snapshots/validator__username_invalid_chars_error.snap
---
source: crates/shiplog-validator/tests/validator.rs
expression: err
---
field: username
message: "username can only contain letters, numbers, underscores, and hyphens"
code: InvalidFormat
